docs: init migration

--- a/docs/content/1.getting-started/1.index.md
+++ b/docs/content/1.getting-started/1.index.md
@@ -17,6 +17,8 @@ Collection a way way to manage contens. Collections help to organize your docume
 - **Automatic Validation**: Validate frontmatter fields to ensure data consistency and accuracy.
 - **Powerful Query Builder**: Use the query builder to filter, sort, and paginate your content collections.
 
+Read more about [Content Collections](/getting-started/collections)
+
 
 ### SQL storage
 
@@ -26,21 +28,11 @@ In Content v3, we've introduced a new storage layer based on SQLite, providing a
 - **Compatibility**: SQL storage is compatible with all SQL databases and can be easily integrated into your existing infrastructure.
 
 
-### Built for edge
-
-
-
 ### TypeScript Integration
 
+With help of the new collections system, Content module provides automatic Typescript types for all your contents.
 
-
-## Migration
-
-
-
-## FAQ
-
-
+All utilities and APIs within the module are strongly typed based on the definitions in your collections, ensuring type safety and reducing errors during development.
 
 :hr
 
