--- a/docs/content/1.getting-started/3.collections.md
+++ b/docs/content/1.getting-started/3.collections.md
@@ -103,9 +103,6 @@ export const collections = {
 }
 ```
 
-## API
-
-
 ## Querying Collections
 
 Nuxt Content provides `queryCollection` utility to query a collection and fetch on or all contents.
@@ -114,4 +111,4 @@ Nuxt Content provides `queryCollection` utility to query a collection and fetch 
 const docs = await queryCollection('docs').all()
 ```
 
-Checkout [`queryCollections` Docs](/composables/query-collection) to read more about this utility.
+Checkout [`queryCollections` API](/api/query-collection).
