--- a/docs/content/4.components/0.content-renderer.md
+++ b/docs/content/4.components/0.content-renderer.md
@@ -3,22 +3,11 @@ title: ContentRenderer
 description: 'Takes your component from an AST to a wonderful template.'
 ---
 
-The `<ContentRenderer>` component renders a document coming from a query with [`queryCollections()`](/composables/query-collection).
+The `<ContentRenderer>` component renders a document coming from a query with [`queryCollections()`](/api/query-collection).
+
+MDC Slot is origianlly part of [@nuxtjs/mdc](https://github.com/nuxt-modules/mdc).
 
 > This component works only with `pages` collections.
-
-```vue [[...slug\\].vue]
-<script lang="ts" setup>
-const route = useRoute()
-const { data: page } = await useAysncData(route.path, () => {
-  return queryCollection('docs').path(route.path).first()
-})
-</script>
-
-<template>
-  <ContentRenderer v-if="page" :value="page" />
-</template>
-```
 
 ## Props
 
@@ -47,3 +36,18 @@ const { data: page } = await useAysncData(route.path, () => {
   - Type: `boolean` or `string`
   - Default: `false`
   - Example: `'ul li'`
+
+## Example
+
+```vue [[...slug\\].vue]
+<script lang="ts" setup>
+const route = useRoute()
+const { data: page } = await useAysncData(route.path, () => {
+  return queryCollection('docs').path(route.path).first()
+})
+</script>
+
+<template>
+  <ContentRenderer v-if="page" :value="page" />
+</template>
+```
