fix: warn about missing `content.config.ts`

--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -35,7 +35,7 @@ export default defineNuxtConfig({
 })
 ```
 
-3. (Optional) Create `content.config.ts` file in project root directory and create your first collextion.
+3. Create `content.config.ts` file in project root directory and create your first collextion.
 
 ```ts [content.config.ts]
 import { defineCollection } from '@nuxt/content'
