--- a/docs/content/2.usage/4.json.md
+++ b/docs/content/2.usage/4.json.md
@@ -9,7 +9,7 @@ description: 'How to define, write and query JSON data.'
 export const collections = {
   authors: defineCollection({
     type: 'data',
-    source: 'authors/**.(json|json5)',
+    source: 'authors/**.json',
     schema: z.object({
       name: z.string(),
       avatar: z.string(),
@@ -34,11 +34,11 @@ Create authors files in `content/authors/` directory.
 ```
 
 
-```json [larbish.json5]
+```json [larbish.json]
 {
-  name: "Baptiste Leproux",
-  avatar: "https://avatars.githubusercontent.com/u/7290030?v=4",
-  url: "https://github.com/larbish"
+  "name": "Baptiste Leproux",
+  "avatar": "https://avatars.githubusercontent.com/u/7290030?v=4",
+  "url": "https://github.com/larbish"
 }
 ```
 ::
