docs: add missing components

--- a/docs/content/4.components/1.mdc-slot.md
+++ b/docs/content/4.components/1.mdc-slot.md
@@ -7,6 +7,9 @@ The `<MDCSlot>` component makes it easier to use Markdown syntax in your Vue com
 
 It is useful when creating components that you want to use in your Markdown content.
 
+MDC Slot is origianlly part of [@nuxtjs/mdc](https://github.com/nuxt-modules/mdc).
+
+
 ## Props
 
 - `use`: The slot to bind on, you must provide a `use` via `$slots.{your_slot}` in `<template>`.
