docs: fix typo, useAysncData to useAsyncData
Files Changed:
1. docs/content/1.getting-started/5.migration.md
2. docs/content/3.api/1.query-collection.md
3. docs/content/3.api/2.query-collection-navigation.md
4. docs/content/3.api/3.query-collection-item-surroundings.md
5. docs/content/3.api/4.query-collection-search-sections.md
6. docs/content/4.components/0.content-renderer.md

--- a/docs/content/1.getting-started/5.migration.md
+++ b/docs/content/1.getting-started/5.migration.md
@@ -37,7 +37,7 @@ Implementing document driven mode is Content v3 is quite easy. All you need is t
 ```vue [[...slug\\].vue]
 <script lang="ts" setup>
 const route = useRoute()
-const { data: page } = await useAysncData(route.path, () => {
+const { data: page } = await useAsyncData(route.path, () => {
   return queryCollection('content').path(route.path).first()
 })
 </script>
