--- a/docs/content/3.api/1.query-collection.md
+++ b/docs/content/3.api/1.query-collection.md
@@ -16,7 +16,7 @@ Use the auto-imported `queryCollection` to find contents inside a collection.Her
 ```vue [[...slug\\].vue]
 <script>
 const route = useRoute()
-const { data: page } = await useAysncData(route.path, () => {
+const { data: page } = await useAsyncData(route.path, () => {
   return queryCollection('docs').path(route.path).first()
 })
 </script>
