--- a/docs/content/3.api/2.query-collection-navigation.md
+++ b/docs/content/3.api/2.query-collection-navigation.md
@@ -16,7 +16,7 @@ Use the auto-imported `queryCollectionNavigation` to generate a navigation tree 
 
 ```vue [[...slug\\].vue]
 <script setup lang="ts">
-const { data } = await useAysncData('navigation', () => {
+const { data } = await useAsyncData('navigation', () => {
   return queryCollectionNavigation('docs')
 })
 </script>
