--- a/docs/content/3.api/3.query-collection-item-surroundings.md
+++ b/docs/content/3.api/3.query-collection-item-surroundings.md
@@ -15,7 +15,7 @@ Use the auto-imported `queryCollectionItemSurroundings` to find the previous and
 
 ```vue [[...slug\\].vue]
 <script setup lang="ts">
-const { data } = await useAysncData('surround', () => {
+const { data } = await useAsyncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo')
 })
 </script>
@@ -48,7 +48,7 @@ Here's an example of how to use `queryCollectionItemSurroundings` to create a si
 
 ```vue [[...slug\\].vue]
 <script setup lang="ts">
-const { data } = await useAysncData('surround', () => {
+const { data } = await useAsyncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo', {
     before: 1,
     after: 1,
