--- a/docs/content/3.api/4.query-collection-search-sections.md
+++ b/docs/content/3.api/4.query-collection-search-sections.md
@@ -15,7 +15,7 @@ Use the auto-imported `queryCollectionSearchSections` to generate searchable sec
 
 ```vue [app.vue]
 <script>
-const { data: sections } = await useAysncData('search-sections', () => {
+const { data: sections } = await useAsyncData('search-sections', () => {
   return queryCollectionSearchSections('docs')
 })
 </script>
@@ -46,7 +46,7 @@ Here's an example of how to use `queryCollectionSearchSections` to create search
 
 ```vue [[...slug\\].vue]
 <script>
-const { data: surround } = await useAysncData('foo-surround', () => {
+const { data: surround } = await useAsyncData('foo-surround', () => {
   return queryCollectionSearchSections('docs', {
     ignoredTags: ['code']
   })
