--- a/docs/content/4.components/0.content-renderer.md
+++ b/docs/content/4.components/0.content-renderer.md
@@ -40,7 +40,7 @@ The `<ContentRenderer>` component renders a document coming from a query with [`
 ```vue [[...slug\\].vue]
 <script lang="ts" setup>
 const route = useRoute()
-const { data: page } = await useAysncData(route.path, () => {
+const { data: page } = await useAsyncData(route.path, () => {
   return queryCollection('docs').path(route.path).first()
 })
 </script>
