--- a/docs/content/1.getting-started/5.migration.md
+++ b/docs/content/1.getting-started/5.migration.md
@@ -15,8 +15,8 @@ Here is the list breaking changes in Content v3:
   - New API is backed by SQL
   - New API search contents within the specific collection
 - `fetchContentNavigation()`{lang=ts} API is replaced with new `queryCollectionNavigation()`{lang=ts}
-- Surrounds now has it's own separate API `queryCollectionItemSurroundings()`{lang=ts}
-- Document driven mode is fully droped, meaning:
+- Surroundings now has its own separate API `queryCollectionItemSurroundings()`{lang=ts}
+- Document driven mode is fully dropped, meaning:
   - Markdown files will not convert to Nuxt pages automatically, you need to create pages, see [how](/components/content-renderer#example)
   - `useContent()`{lang=ts} composable is removed
   - `useContentHead()`{lang=ts} composable is removed
@@ -24,7 +24,7 @@ Here is the list breaking changes in Content v3:
   - `<ContentDoc>`, `<ContentList>`, `<ContentNavigation>` and `<ContentQuery>` components are dropped in v3.
 - `_dir.yml` files are renamed to `.navigation.yml`
 - Multi source is dropped in favor of multi collection.
-- `searchContent()`{lang=ts} is dropen in favor of new api `queryCollectionSearchSections`
+- `searchContent()`{lang=ts} is dropped in favor of new api `queryCollectionSearchSections`
   - Full text search can easily done using this API and [minisearch](https://www.npmjs.com/package/minisearch).
 - `useContentHelpers()`{lang=ts} is removed
 
