docs: link to full text search in migration guide

--- a/docs/content/1.getting-started/5.migration.md
+++ b/docs/content/1.getting-started/5.migration.md
@@ -25,7 +25,7 @@ Here is the list breaking changes in Content v3:
 - `_dir.yml` files are renamed to `.navigation.yml`
 - Multi source is dropped in favor of multi collection.
 - `searchContent()`{lang=ts} is dropped in favor of new api `queryCollectionSearchSections`
-  - Full text search can easily done using this API and [minisearch](https://www.npmjs.com/package/minisearch).
+  - Full text search can easily done using this API See [Full-Text Search Snippets](/snippets/fulltext-search)
 - `useContentHelpers()`{lang=ts} is removed
 
 
