docs: `useContentHead` docs

--- a/docs/content/5.deploy/0.node.md
+++ b/docs/content/5.deploy/0.node.md
@@ -4,7 +4,7 @@ navigation:
   icon: i-simple-icons-nodedotjs
 ---
 
-Node preset is the default preset for Nuxt. It is used to build and run Nuxt applications on Node.js.
+Node preset is the default preset for Nuxt and Nuxt Content. It is used to build and run Nuxt applications on Node.js.
 
 Build project with Nuxt build command:
 
