docs: add postgres database

--- a/docs/content/1.getting-started/6.configuration.md
+++ b/docs/content/1.getting-started/6.configuration.md
@@ -44,6 +44,17 @@ export default defineNuxtConfig({
 ```
 
 
+### `Postgres`
+
+If you plan to deploy your application using PostgreSql database you need to use `postgres` database adapter. 
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    database: { type: 'postgres', url: 'POSTGRES_URL' /* Other options for `pg` */ }
+  }
+})
+```
+
 ## `build`
 
 Nuxt Content read and parse all the available contents at built time. This option let you control over parsing contents.
