docs: update introduction

--- a/docs/content/1.getting-started/1.index.md
+++ b/docs/content/1.getting-started/1.index.md
@@ -1,39 +1,47 @@
 ---
 navigation.title: Introduction
 title: Nuxt Content v3
-description: Nuxt Content v3 is the latest iteration of our content management system, designed to enhance your development experience and streamline your workflows.
+description: Nuxt Content version 3 is the last version of the Git-based CMS designed for Nuxt developers.
 ---
 
-We're thrilled to introduce this major update to Nuxt Content, bringing significant improvements and powerful new features. Nuxt Content v3 is the latest iteration of our content management system, designed to enhance your development experience and streamline your workflows.
+We’re excited to announce Nuxt Content v3, a major upgrade with enhanced performance and new features. As the latest iteration of our Git-based CMS, Nuxt Content v3 is optimized for modern applications built with Nuxt. 
 
 ## What's New in v3?
 
 ### Content Collections
 
-Collection a way way to manage contens. Collections help to organize your documents, validate your frontmatter, and provide automatic TypeScript type-safety for all of your content. With Content Collections, you can:
+Collections are groups of related content items within your Nuxt Content project. They help organize and manage large datasets more efficiently, introducing a host of benefits:
 
-- **Define Custom Collections**: Create custom collections to organize your content based on your needs.
-- **Type-safe Queries**: Use TypeScript to query your content collections with full type-safety.
-- **Automatic Validation**: Validate frontmatter fields to ensure data consistency and accuracy.
+- **Define Collections**: Configure database structures and define your collections in the `content.config.ts` file.
+- **Type-safe Queries**: Optimal Typescript integration with all Nuxt Content utilities.
+- **Automatic Validation**: Validate frontmatter fields or data files (json, yml...) to ensure data consistency and accuracy.
 - **Powerful Query Builder**: Use the query builder to filter, sort, and paginate your content collections.
+- **Studio Integration**: Collections empower the [Studio](https://nuxt.studio), enhancing form generation and ensuring the best editing experience on the platform.
 
-Read more about [Content Collections](/getting-started/collections)
+Read more about [Content Collections](/getting-started/collections).
 
+### Improved Performance with SQL Storage
 
-### SQL storage
+A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was mainly an issue when deploying to edge platforms like [NuxtHub](https://hub.nuxt.com/).
 
-In Content v3, we've introduced a new storage layer based on SQLite, providing a powerful and efficient way to manage contents. This is a significant improvement over the previous file-based storage, which was limited in terms of performance and scalability.
+To address this, Nuxt Content v3 moves away from the file based storing in production and leverage SQL database system. This switch is transparent to users. We provide a zero config support for development mode, static generation, server rendering and edge deployments offering:
 
-- **Fast Queries**: SQL storage enables lightning-fast queries for your content, improving performance and scalability.
-- **Compatibility**: SQL storage is compatible with all SQL databases and can be easily integrated into your existing infrastructure.
+- **Optimized Queries**: SQL storage enables ultra-fast querying, improving both performance and scalability.
+- **Flexible Compatibility:** With an adapter-based system, Nuxt Content v3 easily integrates SQL databases without configuration, regardless of deployment mode (static, server-side, SPA, edge) or platform. For more details, see our [platform deployment options](/deploy/node). We're also inviting community contributions to support additional adapters. 
 
 
 ### TypeScript Integration
 
-With help of the new collections system, Content module provides automatic Typescript types for all your contents.
+With help of the new collections system, the module provides automatic Typescript types for all your contents.
 
 All utilities and APIs within the module are strongly typed based on the definitions in your collections, ensuring type safety and reducing errors during development.
 
+### Built with Nuxt Studio in mind
+
+[Nuxt Studio](https://nuxt.studio) was originally developed alongside Nuxt Content v2, but with v3, we're building the module with the Studio experience in mind. This is why we are providing a tighter integration with Nuxt Studio as our goal is to create the best CMS platform for content editing, while still offering the best developers experience.
+
+The [studio module](https://github.com/nuxtlabs/studio-module) will now be part of Nuxt Content itself. We want the developer to focus on code and let the non technical collaborators edit the content with our non technical interface.
+
 :hr
 
-We're excited about the possibilities Nuxt Content v3 brings to your projects. Explore our documentation to learn more about new features, components, and best practices for building your next website.
+We're excited about the possibilities Nuxt Content v3 brings to your projects. Explore our documentation to learn more about the module integration and all the best practices for building your next website.
