docs: introduction typo

--- a/docs/content/1.getting-started/1.index.md
+++ b/docs/content/1.getting-started/1.index.md
@@ -6,7 +6,7 @@ description: Nuxt Content version 3 is the last version of the Git-based CMS des
 
 We’re excited to announce Nuxt Content v3, a major upgrade with enhanced performance and new features. As the latest iteration of our Git-based CMS, Nuxt Content v3 is optimized for modern applications built with Nuxt. 
 
-## What's New in v3?
+## What's New?
 
 ### Content Collections
 
@@ -40,7 +40,7 @@ All utilities and APIs within the module are strongly typed based on the definit
 
 [Nuxt Studio](https://nuxt.studio) was originally developed alongside Nuxt Content v2, but with v3, we're building the module with the Studio experience in mind. This is why we are providing a tighter integration with Nuxt Studio as our goal is to create the best CMS platform for content editing, while still offering the best developers experience.
 
-The [studio module](https://github.com/nuxtlabs/studio-module) will now be part of Nuxt Content itself. We want the developer to focus on code and let the non technical collaborators edit the content with our non technical interface.
+The [studio module](https://github.com/nuxtlabs/studio-module) will now be part of Nuxt Content itself. We want the developer to focus on code and let the non technical collaborators edit the content with an intuitive interface.
 
 :hr
 
