docs: raw content

--- a/docs/content/6.snippets/1.fulltext-search.md
+++ b/docs/content/6.snippets/1.fulltext-search.md
@@ -9,7 +9,7 @@ You can use the result of this utility in combination with [Nuxt UI Content Sear
 
 ## Nuxt UI Pro
 
-Nuxt UI Pro provide a ready to use component for full-text search. You can use it by passing the result of `queryCollectionSearchSections` to the `files` prop of the component.
+Nuxt UI Pro provides a ready to use component for full-text search. You can use it by passing the result of `queryCollectionSearchSections` to the `files` prop of the component.
 
 Read more about [Nuxt UI Content Search][nuxt-ui-content-search].
 
