docs: update raw content

--- a/docs/content/6.snippets/2.raw-content.md
+++ b/docs/content/6.snippets/2.raw-content.md
@@ -3,7 +3,7 @@ title: Raw Content
 description: Access to contents raw data in appliction
 ---
 
-There were lots of requests in Content version 2 about accessing contents raw data in production. We're happy to announce that in version 3 it is possible to ship contents raw data to production.
+There were lots of requests in Content version 2 about accessing contents raw data in production. In Content version 3 it is possible to ship contents raw data to production.
 
 In order to ship raw contents to production you need to define `rawbody` field in your collection's schema.
 That's it.
