--- a/docs/content/1.getting-started/1.index.md
+++ b/docs/content/1.getting-started/1.index.md
@@ -1,47 +1,44 @@
 ---
 navigation.title: Introduction
 title: Nuxt Content v3
-description: Nuxt Content version 3 is the last version of the Git-based CMS designed for Nuxt developers.
+description: The powerful Git-based CMS designed specifically for Nuxt developers.
 ---
 
-We’re excited to announce Nuxt Content v3, a major upgrade with enhanced performance and new features. As the latest iteration of our Git-based CMS, Nuxt Content v3 is optimized for modern applications built with Nuxt. 
+Welcome to Nuxt Content v3, a major upgrade that brings enhanced performance and innovative features to your Nuxt projects. This latest iteration of our Git-based CMS is optimized for modern application development.
 
 ## What's New?
 
 ### Content Collections
 
-Collections are groups of related content items within your Nuxt Content project. They help organize and manage large datasets more efficiently, introducing a host of benefits:
+Collections organize related items within your project, helping you manage large datasets more efficiently. Key benefits include:
 
-- **Define Collections**: Configure database structures and define your collections in the `content.config.ts` file.
-- **Type-safe Queries**: Optimal Typescript integration with all Nuxt Content utilities.
-- **Automatic Validation**: Validate frontmatter fields or data files (json, yml...) to ensure data consistency and accuracy.
-- **Powerful Query Builder**: Use the query builder to filter, sort, and paginate your content collections.
-- **Studio Integration**: Collections empower the [Studio](https://nuxt.studio), enhancing form generation and ensuring the best editing experience on the platform.
+- **Structured Data**: Configure database architecture and define collections in [`content.config.ts`](/getting-started/collections#defining-collections)
+- **Type-safe Queries**: Direct TypeScript integration across all utilities
+- **Automatic Validation**: Ensure data consistency across frontmatter fields and data files (json, yml...)
+- **Advanced Query Builder**: Filter, sort, and paginate your collections with ease
+- **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](https://nuxt.studio)
 
-Read more about [Content Collections](/getting-started/collections).
+Learn more about [Content Collections](/getting-started/collections).
 
-### Improved Performance with SQL Storage
+### Improved Performance
 
-A key challenge with Nuxt Content v2 was the large bundle size required to store all content files. It was mainly an issue when deploying to edge platforms like [NuxtHub](https://hub.nuxt.com/).
+A significant challenge in v2 was the large bundle size needed for storing files, particularly affecting serverless deployments.
 
-To address this, Nuxt Content v3 moves away from the file based storing in production and leverage SQL database system. This switch is transparent to users. We provide a zero config support for development mode, static generation, server rendering and edge deployments offering:
+V3 addresses this by transitioning to SQL-based storage in production. This switch requires zero configuration, supporting development mode, static generation, server hosting, serverless and edge deployments.
 
-- **Optimized Queries**: SQL storage enables ultra-fast querying, improving both performance and scalability.
-- **Flexible Compatibility:** With an adapter-based system, Nuxt Content v3 easily integrates SQL databases without configuration, regardless of deployment mode (static, server-side, SPA, edge) or platform. For more details, see our [platform deployment options](/deploy/node). We're also inviting community contributions to support additional adapters. 
+Benefits include:
 
+- **Optimized Queries**: SQL storage enables ultra-fast data retrieval
+- **Universal Compatibility**: Our adapter-based system integrates SQL databases across all deployment modes (static, server-side, SPA, edge) and platforms. See our [platform deployment options](/deploy/node) for details. We welcome community contributions for additional adapters.
 
 ### TypeScript Integration
 
-With help of the new collections system, the module provides automatic Typescript types for all your contents.
+The new collections system provides automatic TypeScript types for all your data. Every utility and API is strongly typed based on your collection definitions, ensuring robust type safety throughout development.
 
-All utilities and APIs within the module are strongly typed based on the definitions in your collections, ensuring type safety and reducing errors during development.
+### Nuxt Studio Integration :badge[Soon]{color=neutral}
 
-### Built with Nuxt Studio in mind
-
-[Nuxt Studio](https://nuxt.studio) was originally developed alongside Nuxt Content v2, but with v3, we're building the module with the Studio experience in mind. This is why we are providing a tighter integration with Nuxt Studio as our goal is to create the best CMS platform for content editing, while still offering the best developers experience.
-
-The [studio module](https://github.com/nuxtlabs/studio-module) will now be part of Nuxt Content itself. We want the developer to focus on code and let the non technical collaborators edit the content with an intuitive interface.
+[Nuxt Studio](https://nuxt.studio) and v3 are designed to complement each other perfectly. The [studio module](https://github.com/nuxtlabs/studio-module) is now integrated directly into Nuxt Content, creating an ideal environment where developers can focus on code while team members manage content through an intuitive interface.
 
 :hr
 
-We're excited about the possibilities Nuxt Content v3 brings to your projects. Explore our documentation to learn more about the module integration and all the best practices for building your next website.
+We're excited for you to explore these new capabilities. Dive into our documentation to learn more about integrating the module and implementing best practices in your next project.
