--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -1,11 +1,11 @@
 ---
 title: Installation
-description: 'Learn how to install and configure Nuxt Content v3 in your application.'
+description: 'Get started with Nuxt Content v3 in your Nuxt application.'
 ---
 
-## Setup
+### Install the Package
 
-1. Install the Nuxt Content v3 alpha package:
+Choose your preferred package manager to install Nuxt Content v3:
 
 ::code-group
 
@@ -27,7 +27,9 @@ bun add @nuxt/content@next
 
 ::
 
-2. Register the Nuxt Content module in your `nuxt.config.ts`{lang="ts-type"}:
+### Register the Module
+
+Add the Nuxt Content module to your `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -35,7 +37,9 @@ export default defineNuxtConfig({
 })
 ```
 
-3. Create `content.config.ts` file in project root directory and create your first collextion.
+### Create your First Collection
+
+Create a `content.config.ts` file in your project root directory:
 
 ```ts [content.config.ts]
 import { defineCollection } from '@nuxt/content'
@@ -47,3 +51,15 @@ export const collections = {
   })
 }
 ```
+
+This configuration creates a default `content` collection that processes all Markdown files in your project. You can customize the collection settings based on your needs.
+
+::tip
+The `type: page` setting specifies that each file in the collection represents a [Markdown page](/usage/markdown).
+::
+
+::note{to="/getting-started/collections"}
+Learn more in our **Collections guide**.
+::
+
+
