--- a/docs/content/1.getting-started/5.migration.md
+++ b/docs/content/1.getting-started/5.migration.md
@@ -23,6 +23,7 @@ Here is the list breaking changes in Content v3:
   - `<ContentDoc>`, `<ContentList>`, `<ContentNavigation>` and `<ContentQuery>` components are dropped in v3.
 - `_dir.yml` files are renamed to `.navigation.yml`
 - Multi source is dropped in favor of multi collection.
+- Document `._path` is now renamed to `.path`
 - `searchContent()`{lang=ts} is dropped in favor of new api `queryCollectionSearchSections`
   - Full text search can easily done using this API See [Full-Text Search Snippets](/snippets/fulltext-search)
 - `useContentHelpers()`{lang=ts} is removed
@@ -58,8 +59,6 @@ As we mentioned above, `queryContent` is droped in favor of new collection based
 
 1. `queryCollection` is builting a query for SQL database.
 2. `queryCollection` do the search only inside the specific collection. You should know the collection.
-
-
 
 ```ts [Find content with path]
 // Content v2
