--- a/docs/content/1.getting-started/3.collections.md
+++ b/docs/content/1.getting-started/3.collections.md
@@ -1,44 +1,32 @@
 ---
-title: 'Collections'
-description: 'How to define and configue content collections.'
-navigation:
-  title: Content Collections
+title: 'Content Collections'
+description: 'Learn how to define and configure content collections in your Nuxt application.'
 ---
-
-Collections in Nuxt Content are a powerful way to organize and manage your content. They allow you to group related content items together, making it easier to query, display, and maintain your site's content.
-
 
 ## What are Content Collections?
 
-Content Collections are groups of related content items within your Nuxt Content project. They provide a structured way to organize and manage your content, making it easier to work with large amounts of data.
+Content Collections organize related items within your Nuxt Content project. They provide a structured way to manage your content, making it easier to query, display, and maintain your site's data.
 
-Key features of Content Collections include:
+Key features include:
 
-1. **Logical Grouping**: Collections allow you to group similar content together, such as blog posts, product pages, or documentation articles.
-
-2. **Shared Configuration**: You can apply common settings and validations to all items within a collection, ensuring consistency across your content.
-
-3. **Improved Querying**: Collections make it easier to fetch and filter related content items, enhancing the performance and flexibility of your content queries.
-
-4. **Automatic Type Inference**: Nuxt Content can automatically infer the structure of your content, providing type safety and autocompletion in your development environment.
-
-5. **Flexible Structure**: Collections can be organized in various ways, such as by content type, category, or any other logical grouping that suits your project's needs.
+- **Logical Grouping**: Group similar content together, such as blog posts, product pages, or documentation articles
+- **Shared Configuration**: Apply common settings and validations across all items within a collection
+- **Improved Querying**: Fetch and filter related content items efficiently
+- **Automatic Type Inference**: Get type safety and autocompletion in your development environment
+- **Flexible Structure**: Organize collections by content type, category, or any other logical grouping that suits your needs
 
 ## Defining Collections
 
-To define a custom collection, create `content.config.ts` file in ptoject's root directory. This is a special file that Nuxt Content will load and use to configure collections database, utility types and finding/parsing/querying contents.
+Create a `content.config.ts` file in your project's root directory. This special file configures your collections database, utility types, and content handling.
 
-Here's a simple example of how to define collections in your `content.config.ts` file:
+Here's a basic example:
 
 ```ts [content.config.ts]
 import { defineCollection } from '@nuxt/content'
 
-// Export collections
 export const collections = {
-  // Define collection using `defineCollection` utility
   docs: defineCollection({
-    // Define the source directory for the collection
-    // `source: '**'` will load every file inside `content` directory 
+    // Load every file inside the `content` directory
     source: '**',
     // Specify the type of content in this collection
     type: 'page'
@@ -48,24 +36,19 @@ export const collections = {
 
 ### Collection Schema
 
-Schema is and important part of each collection. Schemas enforce consistent  data within a collection. Schemas also are grounf truth of Typescript typings for collections.
+Schemas enforce data consistency within a collection and serve as the source of truth for TypeScript types.
 
-To define schema for you collection, go to `content.config.ts` and provide `schema` for your collection in `defineCollection` function.
+Define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
 
 ```ts [content.config.ts]
 import { defineCollection, z } from '@nuxt/content'
 
-// Export collections
 export const collections = {
-  // Define collection using `defineCollection` utility
   docs: defineCollection({
-    // Define the source directory for the collection
-    // `source: '**'` will load every file inside `content` directory 
-    source: '**',
-    // Specify the type of content in this collection
+    source: '**.md',
     type: 'page',
     // Define custom schema for docs collection
-    schema: z.object({ // Schema root should be an object!!
+    schema: z.object({  // Schema must be an object
       tags: z.array(z.string()),
       image: z.string(),
       date: z.Date()
@@ -74,30 +57,26 @@ export const collections = {
 }
 ```
 
+::tip
+`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types.
+::
 
-### Multiple collections
+### Multiple Collections
 
-Defining multiple collections is as easy as creating one.
-
+You can define multiple collections to organize different types of content:
 
 ```ts [content.config.ts]
 import { defineCollection, z } from '@nuxt/content'
 
-// Export collections
 export const collections = {
-  // Define collection using `defineCollection` utility
   blog: defineCollection({
-    // Define the source directory for the collection
-    // `source: 'blog/**'` will load every file inside `content/blog` directory 
-    source: 'blog/**',
-    // Specify the type of content in this collection
+    // Load top-level Markdown files from content/blog
+    source: 'blog/*.md',
     type: 'page'
   }),
   docs: defineCollection({
-    // Define the source directory for the collection
-    // `source: 'docs/**'` will load every file inside `content/docs` directory 
-    source: 'docs/**',
-    // Specify the type of content in this collection
+    // Load all Markdown files from content/docs
+    source: 'docs/**.md',
     type: 'page'
   })
 }
@@ -105,10 +84,25 @@ export const collections = {
 
 ## Querying Collections
 
-Nuxt Content provides `queryCollection` utility to query a collection and fetch on or all contents.
+Use the [`queryCollection`](/api/query-collection) util to fetch one or all items from a collection:
 
-```ts
-const docs = await queryCollection('docs').all()
+```vue [pages/blog.vue]
+<script setup lang="ts">
+const { data: posts } = await useAsyncData('blog', () => queryCollection('blog').all())
+</script>
+
+<template>
+  <div>
+    <h1>Blog</h1>
+    <ul>
+      <li v-for="post in posts" :key="post._id">
+        <NuxtLink :to="post.path">{{ post.title }}</NuxtLink>
+      </li>
+    </ul>
+  </div>
+</template>
 ```
 
-Checkout [`queryCollections` API](/api/query-collection).
+::note{to="/api/query-collection"}
+Learn more about the available query options in our `queryCollections` API documentation.
+::
