--- a/docs/content/1.getting-started/6.configuration.md
+++ b/docs/content/1.getting-started/6.configuration.md
@@ -26,7 +26,10 @@ If you want to change default database location and move it to elsewhere you can
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
-    database: { type: 'sqlite', binding: 'SQLITE_DB_LOCATION' }
+    database: {
+      type: 'sqlite',
+      binding: 'SQLITE_DB_LOCATION'
+    }
   }
 })
 ```
@@ -38,7 +41,10 @@ If you plan to deploy your application to Couldflare workers, you need to use `d
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
-    database: { type: 'd1', binding: 'CF_BINDING_NAME' }
+    database: {
+      type: 'd1',
+      binding: 'CF_BINDING_NAME'
+    }
   }
 })
 ```
@@ -47,10 +53,15 @@ export default defineNuxtConfig({
 ### `Postgres`
 
 If you plan to deploy your application using PostgreSql database you need to use `postgres` database adapter. 
+
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
-    database: { type: 'postgres', url: 'POSTGRES_URL' /* Other options for `pg` */ }
+    database: {
+      type: 'postgres',
+      url: 'POSTGRES_URL',
+      /* Other options for `pg` */
+    }
   }
 })
 ```
@@ -65,13 +76,47 @@ Configure markdown parser.
 
 #### `mdc`
 
-`{ type: boolean, default: true }`{lang=ts}
+::code-group
+```ts [Default]
+mdc: true
+```
+```ts [Signature]
+type Mdc = boolean
+```
+::
 
 If you wish to disable MDC syntax support in your contents, you can set this option to `false`.
 
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    build: {
+      markdown: {
+        // Disable MDC syntax support
+        mdc: false,
+      }
+    }
+  }
+})
+```
+
 #### `toc` 
 
-`{ type: object, default: { depth: 2, searchDepth: 2 } }`{lang=ts}
+
+::code-group
+```ts [Default]
+toc: {
+  depth: 2,
+  searchDepth: 2
+}
+```
+```ts [Signature]
+type Toc = {
+  depth: number
+  searchDepth: number
+}
+```
+::
 
 Control behavior of Table of Contents generation.
 
@@ -79,9 +124,30 @@ Value:
 - `depth`: Maximum heading depth to include in the table of contents.
 - `searchDepth`: Maximum depth of nested tags to search for heading.
 
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    build: {
+      markdown: {
+        toc: {
+          depth: 3, // include h3 headings
+        }
+      }
+    }
+  }
+})
+```
+
 #### `remarkPlugins`
 
-`{ type: object, default: {} }`{lang=ts}
+::code-group
+```ts [Default]
+remarkPlugins: {}
+```
+```ts [Signature]
+type RemarkPlugins = Record<string, false | MarkdownPlugin>
+```
+::
 
 A list of [remark](https://github.com/remarkjs/remark) plugins to use.
 
@@ -111,11 +177,16 @@ export default defineNuxtConfig({
 
 #### `rehypePlugins`
 
-`{ type: object, default: {} }`{lang=ts}
-
+::code-group
+```ts [Default]
+rehypePlugins: {}
+```
+```ts [Signature]
+type RehypePlugins = object
+```
+::
 
 A list of [rehype](https://github.com/remarkjs/remark-rehype) plugins to use.
-
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -136,7 +207,14 @@ export default defineNuxtConfig({
 
 #### `highlight`
 
-`{ type: false | object, default: false }`{lang=ts}
+::code-group
+```ts [Default]
+highlight: false
+```
+```ts [Signature]
+type Highlight = false | object
+```
+::
 
 Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/components/prose#prosepre) and [`ProseCode`](/components/prose#prosecode).
 
@@ -179,7 +257,11 @@ export default defineNuxtConfig({
 
 - `highlight.langs`
 
-By default, module loads couple of languages for syntax highlighter: `['json', 'js', 'ts', 'html', 'css', 'vue', 'shell', 'mdc', 'md', 'yaml']`
+By default, module loads couple of languages for syntax highlighter:
+
+```ts [Default]
+['json', 'js', 'ts', 'html', 'css', 'vue', 'shell', 'mdc', 'md', 'yaml']
+```
 
 If you plan to use code samples of other languages, you need to define the language in these options.
 
@@ -228,17 +310,19 @@ Read more about adding languages in the [Shiki documentation](https://github.com
 
 ## `watch`
 
-`{ type: object, default: { enabled: true, ws: { port: 4000, showURL: false } } }`{lang=ts}
+```ts [Default]
+watch: {
+  enabled: true,
+  ws: { port: 4000, showURL: false }
+}
+```
 
 Configure content hot reload in development.
-
 
 Value:
 - `enabled`{lang=ts}: Enable/Disable hot reload.
 - `port`{lang=ts}: Select the port used for the WebSocket server.
 - `showURL`{lang=ts}: Toggle URL display in dev server boot message.
-
-
 
 ::callout
 The watcher is a development feature and will not be included in production.
@@ -276,12 +360,15 @@ Configure content renderer.
 
 ### `anchorLinks`
 
-```ts
-{
-  type: boolean | Record<'h1' | 'h2' | 'h3' | 'h4' | 'h5' | 'h6', boolean>,
-  default: { h2: true, h3: true, h4: true }
-}
+::code-group
+```ts [Default]
+{ h2: true, h3: true, h4: true }
 ```
+```ts [Signature]
+type AnchorLinks = boolean | Record<'h1' | 'h2' | 'h3' | 'h4' | 'h5' | 'h6', boolean>
+```
+::
+
 
 Control anchor link generation, by default it generates anchor links for `h2`, `h3` and `h4` heading
 
@@ -298,7 +385,14 @@ Value:
 
 ### `alias`
 
-`{ type: object, default: { } }`{lang=ts}
+::code-group
+```ts [Default]
+alias: {}
+```
+```ts [Signature]
+type Alias = Record<string, string>
+```
+::
 
 Aliases will be used to replace markdown components and render custom components instead of default ones.
 
