--- a/docs/content/5.deploy/0.node.md
+++ b/docs/content/5.deploy/0.node.md
@@ -8,13 +8,13 @@ Node preset is the default preset for Nuxt and Nuxt Content. It is used to build
 
 Build project with Nuxt build command:
 
-```bash
+```bash [Terminal]
 nuxi build
 ```
 
 When running `nuxi build`{lang="ts-type"} with the Node server preset, the result will be an entry point that launches a ready-to-run Node server. To try output:
 
-```bash
+```bash [Terminal]
 $ node .output/server/index.mjs
 Listening on http://localhost:3000
 ```
