--- a/docs/content/5.deploy/1.cloudflare.md
+++ b/docs/content/5.deploy/1.cloudflare.md
@@ -5,7 +5,7 @@ navigation:
   icon: i-simple-icons-cloudflare
 ---
 
-Nuxt Content uses Nuxt deployment presets to adjust the build process for different hosting platforms. To deploy your Nuxt Content to Cloudflare, you can use the `cloudflare_pages`{lang="ts-type"} preset.
+Nuxt Content uses Nuxt deployment presets to adjust the build process for different hosting platforms. To deploy your Nuxt Content to Cloudflare, you can use the `cloudflare-pages`{lang="ts-type"} preset.
 
 You can do that in two ways:
 
@@ -25,19 +25,12 @@ If you use the [Cloudflare Pages GitHub/GitLab integration][1]{target="_blank"} 
 
 ## Database
 
-Unfortunately sqlite database is not supported in cloudflare environment and you should use another database.
+Unfortunately SQLite database is not supported in cloudflare environment and you should use another database.
 You can simply create a D1 database in cloudflare and use Content Module's D1 adapter.
 
-- You can simply use [Nuxt Hub][nuxt-hub] to create, connect and manage D1 database for you.
-- Or you can create it directly create a D1 database from Cloudflare dashboard and connect it to you project by creating a `wrangler.toml` file in project root. [Get started with Cloudflare D1][d1]
-
-
-
-
-
-
+- Use [Nuxt Hub](/deploy/nuxthub) to create, connect and manage D1 database for you.
+- Or create a D1 database from Cloudflare dashboard and connect it to you project by creating a `wrangler.toml` file in project root. [Get started with Cloudflare D1][d1]
 
 
 [1]: https://developers.cloudflare.com/pages/get-started/#connect-your-git-provider-to-pages
-[nuxt-hub]: https://hub.nuxt.com/docs/features/database
 [d1]: https://developers.cloudflare.com/d1/get-started/
