docs: move to /docs

--- a/docs/content/docs/1.getting-started/6.migration.md
+++ b/docs/content/docs/1.getting-started/6.migration.md
@@ -34,7 +34,7 @@ Here is the list breaking changes in Content v3:
 Implementing document driven mode is Content v3 is quite easy. All you need is to create a catch-all page in Nuxt and fetch contents based on route path.
 
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
 const route = useRoute()
 const { data: page } = await useAsyncData(route.path, () => {
