--- a/docs/content/docs/3.composables/2.query-collection-navigation.md
+++ b/docs/content/docs/3.composables/2.query-collection-navigation.md
@@ -14,7 +14,7 @@ function queryCollectionNavigation<T extends keyof PageCollections>(collection: 
 Use the auto-imported `queryCollectionNavigation` to generate a navigation tree for a specific collection. This is particularly useful for creating dynamic navigation menus or sidebars based on your content structure.
 
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script setup lang="ts">
 const { data } = await useAsyncData('navigation', () => {
   return queryCollectionNavigation('docs')
