--- a/docs/content/docs/3.composables/3.query-collection-item-surroundings.md
+++ b/docs/content/docs/3.composables/3.query-collection-item-surroundings.md
@@ -13,7 +13,7 @@ function queryCollectionItemSurroundings<T extends keyof PageCollections>(collec
 
 Use the auto-imported `queryCollectionItemSurroundings` to find the previous and next items relative to a specific content item in a collection. This is particularly useful for creating navigation between related content pages.
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script setup lang="ts">
 const { data } = await useAsyncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo')
@@ -46,7 +46,7 @@ Each item in the array is of type `ContentNavigationItem` or `null` if there is 
 Here's an example of how to use `queryCollectionItemSurroundings` to create a simple navigation between content pages:
 
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script setup lang="ts">
 const { data } = await useAsyncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo', {
