--- a/docs/content/docs/3.composables/4.query-collection-search-sections.md
+++ b/docs/content/docs/3.composables/4.query-collection-search-sections.md
@@ -44,7 +44,7 @@ Generate searchable sections from the specified collection.
 Here's an example of how to use `queryCollectionSearchSections` to create searchable sections from the 'docs' collection:
 
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script>
 const { data: surround } = await useAsyncData('foo-surround', () => {
   return queryCollectionSearchSections('docs', {
