--- a/docs/content/docs/4.components/0.content-renderer.md
+++ b/docs/content/docs/4.components/0.content-renderer.md
@@ -37,7 +37,7 @@ The `<ContentRenderer>` component renders a document coming from a query with [`
 
 ## Example
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
 const route = useRoute()
 const { data: page } = await useAsyncData(route.path, () => {
