--- a/docs/content/docs/4.components/2.prose.md
+++ b/docs/content/docs/4.components/2.prose.md
@@ -1,6 +1,10 @@
 ---
 title: 'Prose Components'
 description: 'A list of Prose components.'
+links:
+  - label: 'Content Renderer'
+    icon: 'i-lucide-square-text'
+    to: '/components/content-renderer'
 ---
 
 Prose component are replacements for HTML typography tags. Prose components provides simple way to customize content UI. To overwrite a prose component, create a component with the same name in your project `components/content/` directory (ex: `components/content/ProseA.vue`)
