--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -42,3 +42,7 @@ The new collections system provides automatic TypeScript types for all your data
 :hr
 
 We're excited for you to explore these new capabilities. Dive into our documentation to learn more about integrating the module and implementing best practices in your next project.
+
+## Content V2 Migration
+
+Learn how to migrate from Content v2 to v3 in the [migration guide](/docs/getting-started/migration).
