--- a/docs/content/docs/3.composables/1.query-collection.md
+++ b/docs/content/docs/3.composables/1.query-collection.md
@@ -13,7 +13,7 @@ function queryCollection<T extends keyof Collections>(collection: T): Collection
 
 Use the auto-imported `queryCollection` to find contents inside a collection.Here we assume that you havr defined `docs` collection inside `content.config.ts`. If you have not defined any collection, check [How to define a collection](/getting-started/collections#defineCollection).
 
-```vue [[...slug\\].vue]
+```vue [pages/[...slug\\].vue]
 <script>
 const route = useRoute()
 const { data: page } = await useAsyncData(route.path, () => {
